--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+.search {
+  position: relative;
+  height: 50px;
+}
+
+.input {
+  background-color: #fff;
+  padding: 0.3rem;
+  display: none;
+}
+
+.btn {
+  padding: 0.5rem;
+}
